--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
+    "framer-motion": "^12.23.25",
     "next": "16.0.7",
     "next-auth": "^4.24.13",
     "react": "19.2.0",
